--- a/sass/components/_components.scss
+++ b/sass/components/_components.scss
@@ -9,6 +9,7 @@
 
 /* Footer
 --------------------------------------------- */
+@import "footer/widgets";
 @import "footer/copyrights";
 
 /* Home page
