--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -85,7 +85,10 @@ body {
     .login-wrap {
 
         &.logged-in {
-            > span {
+            a {
+                color: $color__text-main;
+            }
+            span {
                 font: {
                     size: 18px;
                     weight: 600;
