--- a/sass/style.scss
+++ b/sass/style.scss
@@ -70,6 +70,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 @import "layouts/header-after";
 @import "layouts/archive-courses";
 @import "layouts/dashboard";
+@import "layouts/login";
+@import "layouts/contact";
 
 /*--------------------------------------------------------------
 # Components
