--- a/sass/base/elements/_fields.scss
+++ b/sass/base/elements/_fields.scss
@@ -36,7 +36,8 @@ input[type="checkbox"] {
 select {
 	appearance: none;
 	width: 100%;
-	padding: 12px 16px;
+	height: 50px;
+	padding: 0 16px;
 	border: 1px solid $color__border-input;
 	background: {
 		image: linear-gradient(45deg, transparent 50%, gray 50%),linear-gradient(135deg, gray 50%, transparent 50%);
@@ -44,7 +45,8 @@ select {
 	  	size: 5px 5px,5px 5px;
 	  	repeat: no-repeat;
 	}
-	font-size: 14px;
+	border-radius: 4px;
+	font-size: 18px;
 
 	&:focus-visible {
 		outline: none;
@@ -53,6 +55,7 @@ select {
 
 textarea {
 	width: 100%;
+	padding: 16px;
 	overflow: auto;
 	resize: vertical;
 }
