--- a/sass/base/typography/_copy.scss
+++ b/sass/base/typography/_copy.scss
@@ -16,7 +16,7 @@ blockquote {
 }
 
 address {
-	margin: 0 0 1.5em;
+	font-style: normal;
 }
 
 pre {
@@ -71,6 +71,12 @@ big {
 .mb-20 {
 	margin-bottom: 20px;
 }
+.mb-48 {
+	margin-bottom: 24px;
+}
+.mb-48 {
+	margin-bottom: 48px;
+}
 .ml-10 {
 	margin-left: 10px;
 }
@@ -82,6 +88,9 @@ big {
 }
 .align-center {
 	align-items: center;
+}
+.text-thin {
+	font-weight: 300;
 }
 .box-with-shadow {
     padding: 24px;
@@ -97,4 +106,11 @@ big {
 	&.box-small {
 		padding: 12px;
 	}
+	&.no-padding {
+		padding: 0;
+	}
+}
+.dark-bg {
+	background: $color__text-main;
+	color: #fff;
 }
