--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -60,6 +60,9 @@ body {
             }
         }
     }
+    .icon {
+        cursor: pointer;
+    }
     .right-wrap .button {
         margin-left: 24px;
     }
