--- a/sass/layouts/_contact.scss
+++ b/sass/layouts/_contact.scss
@@ -33,6 +33,7 @@
         gap: 32px;
 
         .wrap {
+            width: 100%;
             display: flex;
             border-bottom: 1px solid #fff;
             padding-bottom: 32px;
@@ -40,6 +41,13 @@
             &:last-of-type {
                 border-bottom: none;
                 padding-bottom: 0;
+            }
+            a {
+                color: #fff;
+
+                &:hover {
+                    text-decoration: underline;
+                }
             }
         }
         p {
