--- a/sass/components/home/_courses.scss
+++ b/sass/components/home/_courses.scss
@@ -2,17 +2,15 @@
     padding: 100px 0;
 
     .courses-lists {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
-        gap: 78px 20px;
-        justify-content: center;
+
+        .tutor-courses {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(360px, 1fr));
+            gap: 78px 0;
+            justify-content: center;
+        }
     }
-    .course-list {
-        background: #FBFDFF;
-        box-shadow: 0px 2px 15px -10px rgba(0, 0, 0, 0.1), 0px -2px 15px -5px rgba(0, 0, 0, 0.1);
-        border-radius: 12px;
-    }
-    .post-thumbnail {
+    .tutor-course-header > a {
         display: flex;
         height: 204px;
         overflow: hidden;
@@ -24,47 +22,14 @@
             border-radius: 12px 12px 0 0;
         }
     }
-    .wrapper {
-        padding: 24px;
-    }
-    .entry-title {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        font-size: 24px;
-    }
-    .course-features {
-        display: grid;
-        gap: 8px;
-        font-size: 18px;
-        color: $color__text-secondary;
-        margin-top: 12px;
-
-        li {
-            display: flex;
-            justify-content: space-between;
-        }
-        .selector {
-            color: $color__text-light;
-        }
-        .value {
-            font-weight: 600;
-        }
-    }
-    .inline-buttons {
-        border-top: 1px solid $color__border-input;
-        margin-top: 16px;
-        padding-top: 14px;
-
-        .button {
-            flex: 1;
-        }
+    .button {
+        max-width: 100%;
     }
     .course-bottom {
         grid-column: 1/-1;
         display: grid;
         justify-content: center;
-        margin-top: -22px;
+        margin-top: 26px;
     }
 
 }
