--- a/sass/layouts/_login.scss
+++ b/sass/layouts/_login.scss
@@ -26,6 +26,11 @@
             text-decoration: underline;
         }
     }
+    .right-wrap {
+        .login-title {
+            margin-bottom: 24px;
+        }
+    }
     .dark-bg {
         .login-title,
         p {
