--- a/sass/style.scss
+++ b/sass/style.scss
@@ -43,6 +43,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Galleries
 # Plugins
 	- Tutor
+	- WPForms
 # Utilities
 	- Accessibility
 	- Alignments
@@ -83,6 +84,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 # Pluugin
 --------------------------------------------------------------*/
 @import "plugins/tutor/tutor";
+@import "plugins/wpforms/wpforms";
 
 /*--------------------------------------------------------------
 # Utilities
