--- a/sass/layouts/_login.scss
+++ b/sass/layouts/_login.scss
@@ -27,6 +27,7 @@
         }
     }
     .right-wrap {
+        border-radius: 0 12px 12px 0;
         .login-title {
             margin-bottom: 24px;
         }
