--- a/sass/base/elements/_buttons.scss
+++ b/sass/base/elements/_buttons.scss
@@ -21,6 +21,7 @@ input[type="submit"] {
 	letter-spacing: 0.04em;
 	padding: 0 30px;
 	text-transform: uppercase;
+	white-space: nowrap;
 	transition: all 0.2s linear;
 
 	path {
