--- a/sass/components/header/_header.scss
+++ b/sass/components/header/_header.scss
@@ -89,6 +89,7 @@ body {
 
         &.logged-in {
             a {
+                display: flex;
                 color: $color__text-main;
             }
             span {
@@ -106,6 +107,39 @@ body {
         }
         .button + .button {
             margin-left: 24px;
+        }
+    }
+}
+
+@media screen and (max-width: 860px) {
+    body {
+        padding-top: 213px;
+    }
+    .site-header {
+        padding-bottom: 20px;
+
+        .container {
+            grid-template-columns: minmax(200px, 1fr) 1fr;
+        }
+    }
+}
+@media screen and (max-width: 782px) {
+    .admin-bar .site-header.sticky {
+        top: 46px;
+    }
+}
+@media screen and (max-width: 680px) {
+    .top-bar {
+
+        .left-wrap {
+            display: none;
+        }
+        .container {
+            grid-template-columns: 1fr;
+        }
+        .right-wrap {
+            width: 100%;
+            justify-content: space-between;
         }
     }
 }
