--- a/sass/layouts/_contact.scss
+++ b/sass/layouts/_contact.scss
@@ -73,3 +73,16 @@
         margin-top: 48px;
     }
 }
+
+@media screen and (max-width: 720px) {
+    .contact-page {
+
+        .wrapper {
+            flex-direction: column;
+            padding: 24px;
+        }
+        .left-wrap {
+            padding: 0;
+        }
+    }
+}
